--- a/src/app/shared/style/mixins.scss
+++ b/src/app/shared/style/mixins.scss
@@ -23,6 +23,12 @@
     }
   }
 
+  @if $breakpoint ==tablet {
+    @media only screen and (min-width: 767px) and (max-width:1199px) {
+      @content
+    }
+  }
+
   @if $breakpoint ==lg {
     @media only screen and (max-width: 991px) {
       @content
